Add Docker Compose profiles for various services including ComfyUI, Whisper, and updates to existing services. Introduce new documentation files for backups, hybrid architecture, and quickstart guides. Enhance startup script for profile selection and update existing compose files for consistency.

--- a/compose/docker-compose.devtools.tamago.yml
+++ b/compose/docker-compose.devtools.tamago.yml
@@ -2,5 +2,6 @@ version: '3.9'
 services:
   jupyterlab:
     image: jupyter/datascience-notebook
+    profiles: ["tamago"]
     ports:
       - "8888:8888"
