--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,3 +116,9 @@ jobs:
           ignore-unfixed: true
           format: sarif
           output: trivy.sarif
+
+# .github/workflows/ci.yml (after Trivy step that writes trivy.sarif)
+- name: Upload Trivy scan results
+  uses: github/codeql-action/upload-sarif@v2
+  with:
+    sarif_file: trivy.sarif
